--- a/index.html
+++ b/index.html
@@ -1,85 +1,102 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
 <html lang="en">
-  <head>
-    <title>Connect Four Game</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Amira Anuar">
-    
-    <!-- Custom styles for this template -->
-    <link href="styles/style.css" rel="stylesheet">
-  </head>
 
-  <body id="main">
+<head>
+  <title>Play Connect Four!</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Amira Anuar">
 
-    <!-- Connect Four Table 7 columns x 6 rows -->
-    <table id="gameTable">
-      <tr data-row="0">
-        <td><div data-column="0" class="circle"></div></td>
-        <td><div data-column="1" class="circle"></div></td>
-        <td><div data-column="2" class="circle"></div></td>
-        <td><div data-column="3" class="circle"></div></td>
-        <td><div data-column="4" class="circle"></div></td>
-        <td><div data-column="5" class="circle"></div></td>
-        <td><div data-column="6" class="circle"></div></td>
-      </tr>
+  <!-- Custom styles for this template -->
+  <link href="styles/style.css" rel="stylesheet">
+</head>
 
-      <tr data-row="1">
-        <td><div data-column="0" class="circle"></div></td>
-        <td><div data-column="1" class="circle"></div></td>
-        <td><div data-column="2" class="circle"></div></td>
-        <td><div data-column="3" class="circle"></div></td>
-        <td><div data-column="4" class="circle"></div></td>
-        <td><div data-column="5" class="circle"></div></td>
-        <td><div data-column="6" class="circle"></div></td>
-      </tr>
+<body id="main">
 
-      <tr data-row="2">
-        <td><div data-column="0" class="circle"></div></td>
-        <td><div data-column="1" class="circle"></div></td>
-        <td><div data-column="2" class="circle"></div></td>
-        <td><div data-column="3" class="circle"></div></td>
-        <td><div data-column="4" class="circle"></div></td>
-        <td><div data-column="5" class="circle"></div></td>
-        <td><div data-column="6" class="circle"></div></td>
-      </tr>
+  <!-- Game heading -->
+  <div class="title">
+    <h1>Connect Four</h1>
+  </div>
 
-      <tr data-row="3">
-        <td><div data-column="0" class="circle"></div></td>
-        <td><div data-column="1" class="circle"></div></td>
-        <td><div data-column="2" class="circle"></div></td>
-        <td><div data-column="3" class="circle"></div></td>
-        <td><div data-column="4" class="circle"></div></td>
-        <td><div data-column="5" class="circle"></div></td>
-        <td><div data-column="6" class="circle"></div></td>
-      </tr>
+  <!-- Players -->
+  <div id="players">
+    <span id="playerone"></span><span id="playertwo"></span> 
+  </div>
 
-      <tr data-row="4">
-        <td><div data-column="0" class="circle"></div></td>
-        <td><div data-column="1" class="circle"></div></td>
-        <td><div data-column="2" class="circle"></div></td>
-        <td><div data-column="3" class="circle"></div></td>
-        <td><div data-column="4" class="circle"></div></td>
-        <td><div data-column="5" class="circle"></div></td>
-        <td><div data-column="6" class="circle"></div></td>
-      </tr>
+  <!-- Screen that shows during animations that disallow user interaction -->
+  <div id="screenCover"></div>
 
-      <tr data-row="5">
-        <td><div data-column="0" class="circle"></div></td>
-        <td><div data-column="1" class="circle"></div></td>
-        <td><div data-column="2" class="circle"></div></td>
-        <td><div data-column="3" class="circle"></div></td>
-        <td><div data-column="4" class="circle"></div></td>
-        <td><div data-column="5" class="circle"></div></td>
-        <td><div data-column="6" class="circle"></div></td>
-      </tr>
+  <!-- Connect Four Table 7 columns x 6 rows -->
+  <table id="gameTable">
+    <tr data-row="0">
+      <td><div data-column="0" class="circle"></div></td>
+      <td><div data-column="1" class="circle"></div></td>
+      <td><div data-column="2" class="circle"></div></td>
+      <td><div data-column="3" class="circle"></div></td>
+      <td><div data-column="4" class="circle"></div></td>
+      <td><div data-column="5" class="circle"></div></td>
+      <td><div data-column="6" class="circle"></div></td>
+    </tr>
 
-    </table>
+    <tr data-row="1">
+      <td><div data-column="0" class="circle"></div></td>
+      <td><div data-column="1" class="circle"></div></td>
+      <td><div data-column="2" class="circle"></div></td>
+      <td><div data-column="3" class="circle"></div></td>
+      <td><div data-column="4" class="circle"></div></td>
+      <td><div data-column="5" class="circle"></div></td>
+      <td><div data-column="6" class="circle"></div></td>
+    </tr>
+
+    <tr data-row="2">
+      <td><div data-column="0" class="circle"></div></td>
+      <td><div data-column="1" class="circle"></div></td>
+      <td><div data-column="2" class="circle"></div></td>
+      <td><div data-column="3" class="circle"></div></td>
+      <td><div data-column="4" class="circle"></div></td>
+      <td><div data-column="5" class="circle"></div></td>
+      <td><div data-column="6" class="circle"></div></td>
+    </tr>
+
+    <tr data-row="3">
+      <td><div data-column="0" class="circle"></div></td>
+      <td><div data-column="1" class="circle"></div></td>
+      <td><div data-column="2" class="circle"></div></td>
+      <td><div data-column="3" class="circle"></div></td>
+      <td><div data-column="4" class="circle"></div></td>
+      <td><div data-column="5" class="circle"></div></td>
+      <td><div data-column="6" class="circle"></div></td>
+    </tr>
+
+    <tr data-row="4">
+      <td><div data-column="0" class="circle"></div></td>
+      <td><div data-column="1" class="circle"></div></td>
+      <td><div data-column="2" class="circle"></div></td>
+      <td><div data-column="3" class="circle"></div></td>
+      <td><div data-column="4" class="circle"></div></td>
+      <td><div data-column="5" class="circle"></div></td>
+      <td><div data-column="6" class="circle"></div></td>
+    </tr>
+
+    <tr data-row="5">
+      <td><div data-column="0" class="circle"></div></td>
+      <td><div data-column="1" class="circle"></div></td>
+      <td><div data-column="2" class="circle"></div></td>
+      <td><div data-column="3" class="circle"></div></td>
+      <td><div data-column="4" class="circle"></div></td>
+      <td><div data-column="5" class="circle"></div></td>
+      <td><div data-column="6" class="circle"></div></td>
+    </tr>
+
+  </table>
 
 
-    <!-- Javascript -->
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script src="gameLogic.js"></script>
+  <!-- Javascript -->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="js/gameBoard.js"></script>
+  <script src="js/player.js"></script>
+  <script src="js/game.js"></script>
 
-  </body>
+</body>
+
 </html>
